# ION-Sequencer

./: .gitignore  README.md  flake.nix  pyproject.toml
ionseq/seq/: time_instance.py
src/ion_sequencer/seq/: event.py
src/ionseq/devices/: device_db.py
src/ionseq/seq/: event.py  time_instance.py  utils.py
