[project]
name = "ion_sequencer"
version = "0.1.0"
description = "Ion Sequencing Analysis Toolkit"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]   
dependencies = [
    "numpy",
    "sympy",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ion_sequencer"]
package-dir = {"" = "src"}